# eskornd.github.io

./: .gitignore  CMakeLists.txt  LICENSE  README.md  index.html
2022/: 1  App.js  editor.html  editor.js  index.html  main.js  minipreflight.html  minipreflight.js  package.json  quickcheck.html  quickcheck.js  test.html
G/: Glyph.js  Glyph.wasm  GlyphRender.js  Main.js  WasmProgress.js  body.html  footer.html  index.html
NDL/: about.html  editor.html  editor.js  index.html
Rainbow/: Innovation2019.js  Rainbow.js  index.html
UECI/: boot.html  index.html
WebTextPrototype/: EskoWebTypesetting.html  WebTextPrototype.js  WebTextPrototype.wasm  hiddenform.html  htmlpublisher-wrapper.html  index.html  tw.js  twbox.html
css/: index.css
eskoSSO/: BUILD_INFO_Mac.txt  BUILD_INFO_Win.txt  BUILD_NUMBER.txt  P4_CHANGELIST.txt  download_latest_mac.sh  index.html
fixmail/: index.html
js/: AI.js  interact.js
mcp/: index.html
resources/: Sudoku.xlsx
shapes/: index.html
shopping/: index.html  projects.json.txt  sample_spec.txt
srcs/: Game.cpp  Game.h  Main.cpp  Robot.cpp  Robot.h
styles/: fontdefs.css  theme_devel.css
toolbox_bak/: Doxyfile_Template  add_debug_entitlement.sh  automerge_ps.sh  deploy_app_from_jenkins.sh  deploy_deskpack.sh  deploy_underline2503.sh  download_ArtPro+.sh  doxygen.sh  jenkins_delete_builds.sh  jira_login.py  mem_leak_check.sh  p4_pull_packageshop_lnd.py  p4_sync.py  p4_update_spec.py  p4_user_stats.py  publish_askneil.sh  replace_aips.py  set_ArtProPlus_URL.sh  simple_http_server.py  uninstall_xmp.sh
wasm2D/: WebAssemblyDemo.js  (+6 more)
(+322 files in other folders)
